# openvim.cpp

./: .gitignore  .gitmodules  CMakeLists.txt  GUI_README.md  README.md  run_gui.sh  run_gui_force.sh  run_gui_virtual.sh
migrations/: 0001_initial.down.sql  0001_initial.up.sql
src/: config.cpp  config.hpp  main.cpp
src/db/: db.cpp  db.hpp  migrate.cpp  migrate.hpp
src/gui/: chat_widget.cpp  chat_widget.hpp  code_editor.cpp  code_editor.hpp  file_browser.cpp  file_browser.hpp  main_window.cpp  main_window.hpp  permission_dialog.cpp  permission_dialog.hpp  tool_output.cpp  tool_output.hpp
src/llm/: llm.cpp  llm.hpp
src/logging/: logger.cpp  logger.hpp
src/message/: message.cpp  message.hpp
src/permission/: permission.cpp  permission.hpp
src/pubsub/: broker.hpp
src/session/: session.cpp  session.hpp
src/tools/: agent_tool.cpp  agent_tool.hpp  bash_tool.cpp  bash_tool.hpp  edit_tool.cpp  edit_tool.hpp  file_tool.cpp  file_tool.hpp  glob_tool.cpp  glob_tool.hpp  grep_tool.cpp  grep_tool.hpp  ls_tool.cpp  ls_tool.hpp  mcp_tool.cpp  mcp_tool.hpp  tool.hpp  view_tool.cpp  view_tool.hpp  write_tool.cpp  write_tool.hpp
src/tui/: app.cpp  app.hpp  page.hpp  styles.hpp
src/tui/components/: permission_dialog.cpp  permission_dialog.hpp
src/tui/pages/: init_page.cpp  init_page.hpp  logs_page.cpp  logs_page.hpp  repl_page.cpp  repl_page.hpp
